# gtkwallpapers

./: Cargo.toml  README.md
src/: config.rs  daemon.rs  flickr.rs  main.rs  providers.rs  service.rs  terms.rs  tray.rs  wallpaper.rs
