[package]
name = "gtkwallpapers"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
dialoguer = "0.11"
console = "0.15"
humantime = "2"
anyhow = "1"
